clusters/sirius/apps/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        fsGroup: 0
      containers:
      - name: transmission
        image: linuxserver/transmission:4.0.6-r4-ls291
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        - name: torrent
          containerPort: 51413
          protocol: TCP
        - name: torrent-udp
          containerPort: 51413
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: nfsdownloads
          mountPath: /downloads
          mountPropagation: HostToContainer
        readinessProbe:
          exec:
            command: ["test", "-f", "/config/DONOTDELETE"]
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: config
        nfs:
          server: 192.168.1.10
          path: /mnt/primary/root/config/transmission
          readOnly: false
      - name: nfsdownloads
        nfs:
          server: 192.168.1.10
          path: /mnt/primary/root/downloads
          readOnly: false
      - name: settings-override
        configMap:
          name: settings-override
