clusters/sirius/apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  ports:
    - name: http
      port: 9091
      targetPort: http
      protocol: TCP
    - name: rpc
      port: 51413
      targetPort: rpc
      protocol: TCP
    - name: rpc-udp
      port: 51413
      targetPort: rpc-udp
      protocol: UDP
  selector:
    app: transmission
