clusters/sirius/apps/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
  name: transmission-ingress
spec:
  tls:
  - hosts:
    - transmission.sirius.moonblade.work
    secretName: transmission-cert
  rules:
  - host: transmission.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-outer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: transmission.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              name: http
